testdata/parser/negative/6.pdl
#version 100

import std.reo;

// duplicate formal parameters
composite main(in a, out a) {
	new sync(a, a);
}
